03-object-management/04-services/03-ingress-egress/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
spec:
  type: NodePort
  selector:
    app: nginx-ingress
  ports:
  - protocol: TCP
    port: 80
    targetPort: 35006
